--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website</h1>  
+        <h1>Welcome to My Website</h1> 
+        <h1>Welcome to my website</h1>
+
+                <h2>What do I have to offer some thing</h2>
+
+                <h3>1. Financial Benefits in addation to wage</h3>
+
+                <h3>2. Society improves work</h3>
+
+                <h4>a. Improving the tax system</h4>
+
+                <h4>b. Providing more refuse dumps</h4>
+
+                <h2>Who am I</h2>
+
+                <h2>Conclusion</h2> 
     </main>
 	<script src="index.js"></script>
   </body>
